--- a/pom.xml
+++ b/pom.xml
@@ -57,13 +57,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
                                 <artifactId>maven-surefire-plugin</artifactId>
-                                <version>3.5.2</version>
+                                <version>3.2.2</version>
 
 				<configuration>
-					<forkCount>3</forkCount>
+					<!--<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
 					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-					<suiteXmlFiles>
+					<suiteXmlFiles> -->
 						<suiteXmlFile>src/test/resources/testrunners/testng_regressions.xml</suiteXmlFile>
 						<!-- <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> -->
 
